# m3u8-shuffler

./: README.md  justfile  pyproject.toml
src/m3u8_shuffler/: __init__.py
