[project]
name = "m3u8-shuffler"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "James Walker", email = "james.chunho@gmail.com" }
]
dependencies = []
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/m3u8_shuffler"]

[project.scripts]
shuffle = "m3u8_shuffler:main"
